# LuminousMaths

./: .gitignore  CMakeLists.txt  CMakePresets.json  EngineMaths.sln  README.md
Code/: test.cpp
Code/Include/: MathUtils.hpp  MathsExport.hpp  Matrix3.hpp  Matrix4.hpp  Quaternion.h  Quaternion.hpp  Utils.hpp  Vector2.hpp  Vector3.hpp
Code/Source/: MathUtils.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Utils.cpp  Vector2.cpp  Vector3.cpp  dummy.cpp
EngineMaths/: EngineMaths.vcxproj  test.cpp
EngineMaths/Code/Include/: Matrix3.h  Matrix4.h  Utils.h  Vector2.h  Vector3.h
EngineMaths/Code/Source/: Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp
Tests/: CMakeLists.txt
Tests/Libs/: CMakeLists.txt
Tests/UnitTests/: CMakeLists.txt  Test.cpp  UT_Matrix3.cpp  UT_Matrix4.cpp  UT_Quaternion.cpp  UT_Vector2.cpp  UT_Vector3.cpp  main.cpp
